--- a/src/XNAManager/Properties/Resources.resx
+++ b/src/XNAManager/Properties/Resources.resx
@@ -121,4 +121,190 @@
   <data name="Coolvetica" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ModsManager\Resources\Coolvetica.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Logo_100x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logo_100x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Advance_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Advance_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Approval_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Approval_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Automation_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Automation_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Back_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Back_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Bug_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Bug_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Checked_Checkbox_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Checked_Checkbox_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Collapse_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Collapse_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Collapse_Arrow_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Collapse_Arrow_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Crop_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Crop_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Close_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Delete_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Disconnected_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Disconnected_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Discord_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Discord_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Download_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Download_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Dragon_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Dragon_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Expand_Arrow_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Expand_Arrow_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Fit_to_Width_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Fit_to_Width_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Forward_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Forward_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_FullScreen_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_FullScreen_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_FullScreen_Hover_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_FullScreen_Hover_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Handshake_Heart_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Handshake_Heart_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Information_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Information_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Info_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Info_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Installing_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Installing_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_JSON_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_JSON_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Linking_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Linking_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_LOG_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_LOG_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Mana_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Mana_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Menu_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Menu_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Minimize_Window_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Minimize_Window_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_More_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_More_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Paint_Brush_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Paint_Brush_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Play_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Play_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Refresh_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Refresh_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Rename_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Rename_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Reset_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Reset_96px_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Sad_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Sad_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Search_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Search_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Settings_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Settings_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Settings_Hover_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Settings_Hover_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Software_Installer_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Software_Installer_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Source_Code_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Source_Code_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Speed_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Speed_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Toggle_Off_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Toggle_Off_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Toggle_On_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Toggle_On_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Trash_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Trash_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Unchecked_Checkbox_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Unchecked_Checkbox_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Uninstalling_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Uninstalling_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_User_Menu_Male_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_User_Menu_Male_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Wrench_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Wrench_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Plus_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Plus_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Clear_Symbol_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Clear_Symbol_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Erase_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Erase_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Error_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Error_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Extensions_Folder_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Extensions_Folder_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Heart_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Heart_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Love_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Love_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Reset_96px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Reset_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Send_Email_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Send_Email_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Star_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Star_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Star_Filled_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Star_Filled_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Close_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Close_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
