--- a/src/XNAManager/MMUIBugReport.resx
+++ b/src/XNAManager/MMUIBugReport.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label1.Text" xml:space="preserve">
+  <data name="label_Info.Text" xml:space="preserve">
     <value>      A problem has been encountered and the program needs
 to close.
 
