--- a/src/XNAManager/Properties/Resources.resx
+++ b/src/XNAManager/Properties/Resources.resx
@@ -226,9 +226,6 @@
   <data name="White_Rename_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\White_Rename_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="White_Reset_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\White_Reset_96px_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="White_Sad_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\White_Sad_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -292,9 +289,6 @@
   <data name="White_Love_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\White_Love_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="White_Reset_96px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\White_Reset_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="White_Send_Email_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\White_Send_Email_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -304,7 +298,25 @@
   <data name="White_Star_Filled_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\White_Star_Filled_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Close_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Close_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Gray_Close_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\gray_close_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Gray_Fit_to_Width_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\gray_fit_to_width_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Close_100px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_Close_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_Reset_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\white_reset_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="White_DragFile_300x200px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\White_DragFile_300x200px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Gray_Toggle_Off_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Gray_Toggle_Off_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Gray_Toggle_On_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Gray_Toggle_On_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
